tests/invalid/str_len_wrong_arg_count/main.py
def run_case() -> None:
    s: str = "hello"
    out: int = s.__len__(42)


if __name__ == "__main__":
    run_case()
